# actionplugin

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  all  all2  bootstrap  bootstrap.sh  config.status  configure  configure.ac  deneme  deneme2  deneme3  deneme4  denemePredicate  denemeenson  denemeikiayniatom  denemenormal  denemeplugin  denemeplugin2  denemerdf  denemeweak  denemeweak2  denemeweak3  dlvhex.pc  duzgundeneme  libtool  output  output2  rest2
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
dlvhex-actionplugin/: NEWS  svn-commit.tmp
dlvhex-actionplugin/include/: AddonAtom.h  AddonContainer.h  Makefile.am
dlvhex-actionplugin/src/: AddonAtom.cpp  AddonContainer.cpp  Makefile.am
dlvhex-actionplugin/src/.deps/: ActionConverter.Plo  ActionOutputBuilder.Plo  ActionPlugin.Plo  AddonAtom.Plo  AddonContainer.Plo
docs/: Iteration.tex  diagram_flow.dia  diagram_flow_new.dia
examples/: Makefile  Makefile.am  Makefile.in  cmp.hex  concat.hex  disjunction.hex  first.hex  fourth.hex  second.hex  third.hex
examples/BoolMatrix_2x/: Makefile.am  NEWS  README
examples/BoolMatrix_2x/examples/: DurationIterations.hex  NumberIterations.hex  game_of_life_actions.hex  game_of_life_grid.hex  game_of_life_starting_pattern_beacon.hex  game_of_life_starting_pattern_blinker.hex  game_of_life_starting_pattern_block.hex  game_of_life_starting_pattern_glider.hex  game_of_life_starting_pattern_glider_gun.hex  game_of_life_starting_pattern_pulsar.hex  game_of_life_starting_pattern_toad.hex  rule110.hex  rule30.hex  rule30_actions.hex  rule30_continueIteration.hex  rule30_facts.hex  rule30_stopIteration.hex  rule90.hex
examples/BoolMatrix_2x/include/: BoolMatrixActionPlugin.h  Makefile.am  TGAImageMaker.h  TGAImageMakerInfo
examples/BoolMatrix_2x/src/: BoolMatrixActionPlugin.cpp  Makefile.am  TGAImageMaker.cpp
examples/Utilities/: NEWS  README
examples/Utilities/examples/: iteration.hex
examples/Utilities/include/: Makefile.am  UtilitiesActionPlugin.h
examples/Utilities/src/: Makefile.am  UtilitiesActionPlugin.cpp
examples/tests/: actionplugintests.test  answerset_compare.py  checknothing.stdout  cmp.out  concat.out  first.out  run-dlvhex-tests.sh  stringplugintests.test
include/: Action.h  ActionAddonAtom.h  ActionAddonContainer.h  ActionConverter.h  ActionOutputBuilder.h  ActionPlugin.h  ActionPluginFinalCallback.h  ActionPluginInterface.h  ActionPluginModelCallback.h  ActionPluginParserModule.h  ActionScheduler.h  Makefile  Makefile.am  Makefile.in  PluginActionBase.h  RobotActionPlugin.h  RobotActionPluginAllInOne.h  common.h  config.h
include/acthex/: Action.h  ActionParserModule.h  ActionPlugin.h  ActionPluginCtxData.h  ActionPluginFinalCallback.h  ActionPluginInterface.h  ActionPluginModelCallback.h  ActionPluginParserModule.h  ActionPluginParserModuleForBuiltInConstants.h  ActionScheduler.h  BestModelSelector.h  BuiltInDeclarationsParserModule.h  DefaultBestModelSelector.h  DefaultExecutionScheduleBuilder.h  ExecutionModeRewriter.h  ExecutionScheduleBuilder.h  Makefile.am  PluginActionBase.h  UtilitiesActionPlugin.h
include/dlvhex/: ActionAtom.h  AnswerSet.h  AtomSet.h  BaseVisitor.h  HexGrammar.h  HexGrammar.tcc  HexGrammarPTToASTConverter.h  Makefile  Makefile.in  PrintVisitor.h  ProgramCtx.h  ResultContainer.h  State.h
include/testsuite/: Makefile  Makefile.in
include/testsuite/dlvhex/: Makefile  Makefile.in
libltdl/: Makefile  config.h  config.status  libtool
libltdl/.deps/: dlopen.Plo  libltdlc_la-lt__alloc.Plo  libltdlc_la-lt_dlloader.Plo  libltdlc_la-lt_error.Plo  libltdlc_la-ltdl.Plo  libltdlc_la-preopen.Plo  libltdlc_la-slist.Plo  lt__strl.Plo
libltdl/autom4te.cache/: requests
m4/: boost.m4  doxygen.m4
src/: Action.cpp  ActionAddonAtom.cpp  ActionAddonContainer.cpp  ActionConverter.cpp  ActionOutputBuilder.cpp  ActionParserModule.cpp  ActionPlugin.cpp  ActionPluginCtxData.cpp  ActionPluginFinalCallback.cpp  ActionPluginInterface.cpp  ActionPluginModelCallback.cpp  ActionPluginParserModule.cpp  ActionPluginParserModuleForBuiltInConstants.cpp  ActionScheduler.cpp  BestModelSelector.cpp  BuiltInDeclarationsParserModule.cpp  ExecutionModeRewriter.cpp  ExecutionScheduleBuilder.cpp  Makefile  Makefile.am  Makefile.in  PluginActionBase.cpp  RobotActionPlugin.cpp  UtilitiesActionPlugin.cpp  config.h  config.h.in  stringplugin.cpp
src/dlvhex/: ActionAtom.cpp  AnswerSet.cpp  AtomSet.cpp  DLVresultParserDriver.cpp  HexGrammarPTToASTConverter.cpp  Makefile  Makefile.am  Makefile.in  PrintVisitor.cpp  ProgramCtx.cpp  ResultContainer.cpp  State.cpp  dlvhex.cpp
src/dlvhex/.deps/: ASPSolver.Plo  ActionAtom.Plo  AggregateAtom.Plo  AnswerSet.Plo  Atom.Plo  AtomNode.Plo  AtomSet.Plo  BoostComponentFinder.Plo  Component.Plo  ComponentFinder.Plo  DLVProcess.Plo  DLVresultParserDriver.Plo  Dependency.Plo  DependencyGraph.Plo  Error.Plo  EvaluateExtatom.Plo  ExternalAtom.Plo  FixpointModelGenerator.Plo  GraphBuilder.Plo  GraphProcessor.Plo  GuessCheckModelGenerator.Plo  HexGrammarPTToASTConverter.Plo  HexParserDriver.Plo  Literal.Plo  NodeGraph.Plo  OrdinaryModelGenerator.Plo  PluginContainer.Plo  PluginInterface.Plo  PrintVisitor.Plo  ProcessBuf.Plo  Program.Plo  ProgramCtx.Plo  Registry.Plo  Repository.Plo  ResultContainer.Plo  Rule.Plo  RuleMLOutputBuilder.Po  SafetyChecker.Plo  State.Plo  Term.Plo  (+4 more)
src/testsuite/: Makefile  Makefile.in
src/testsuite/dlvhex/: Makefile  Makefile.in
src/testsuite/dlvhex/.deps/: TestPlugin.Plo
vs10/: actionplugin.sln
vs10/actionplugin/: actionplugin.vcxproj  actionplugin.vcxproj.filters
vs10/setup/: setup.vdproj
