# include_HEADERS = \
# 		ActionPlugin.h \
# 		Action.h \
# 		ActionPluginInterface.h \
# 		ActionPluginModelCallback.h \
# 		ActionPluginFinalCallback.h \
# 		ActionScheduler.h \
# 		ActionPluginParserModule.h \
# 		PluginActionBase.h \
# 		RobotActionPlugin.h

ACTIONHEADERS = \
	Action.h \
	ActionPluginInterface.h \
	ActionPluginModelCallback.h \
	ActionPluginFinalCallback.h \
	ActionScheduler.h \
	ActionPluginParserModule.h \
	PluginActionBase.h

pkginclude_HEADERS = $(ACTIONHEADERS)

noinst_HEADERS = ActionPlugin.h