ACTIONHEADERS = \
	Action.h \
	ActionPluginInterface.h \
	ActionPluginModelCallback.h \
	ActionPluginFinalCallback.h \
	ActionParserModule.h \
	PluginActionBase.h \
	ActionPlugin.h \
	BestModelSelector.h \
	ExecutionScheduleBuilder.h \
	BuiltInDeclarationsParserModule.h \
	ActionPluginCtxData.h

pkginclude_HEADERS = $(ACTIONHEADERS)
